--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
 
       <div id="scoreboard" class="section">
         <ol>
-          <li class="tries"><img src="images/liveHeart.png" alt="Heart Icon" height="50" width="50" /></li>
-          <li class="tries"><img src="images/liveHeart.png" alt="Heart Icon" height="50" width="50" /></li>
-          <li class="tries"><img src="images/liveHeart.png" alt="Heart Icon" height="50" width="50" /></li>
-          <li class="tries"><img src="images/liveHeart.png" alt="Heart Icon" height="50" width="50" /></li>
-          <li class="tries"><img src="images/liveHeart.png" alt="Heart Icon" height="50" width="50" /></li>
+          <li class="tries"><img src="images/liveHeart.png" alt="Heart Icon" height="50" /></li>
+          <li class="tries"><img src="images/liveHeart.png" alt="Heart Icon" height="50" /></li>
+          <li class="tries"><img src="images/liveHeart.png" alt="Heart Icon" height="50" /></li>
+          <li class="tries"><img src="images/liveHeart.png" alt="Heart Icon" height="50" /></li>
+          <li class="tries"><img src="images/liveHeart.png" alt="Heart Icon" height="50" /></li>
         </ol>
       </div>
     </div>
