--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="css/styles.css" rel="stylesheet" />
     <link href="css/animate.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" />
+    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico" />
   </head>
 
   <body>
